name:                tabbycat-feedback
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jlimperg/tabbycat-feedback#readme
license:             BSD3
license-file:        LICENSE
author:              Jannis Limperg
maintainer:          jannis@limperg.de
copyright:           (C) 2021 Jannis Limperg
category:            Script
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                   , static/style.css

executable tabbycat-feedback
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , blaze-html
                     , bytestring
                     , containers
                     , directory
                     , file-embed
                     , modern-uri
                     , optparse-applicative
                     , req
                     , text
  other-modules:       Api
                     , CmdArgs
                     , Render
                     , Static
                     , Types
